logs/capsul.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/capsul'...
Listing './lib/python3.5/site-packages/capsul/attributes'...
Listing './lib/python3.5/site-packages/capsul/attributes/test'...
Listing './lib/python3.5/site-packages/capsul/pipeline'...
Listing './lib/python3.5/site-packages/capsul/pipeline/test'...
Listing './lib/python3.5/site-packages/capsul/plugins'...
Listing './lib/python3.5/site-packages/capsul/process'...
Listing './lib/python3.5/site-packages/capsul/process/test'...
Listing './lib/python3.5/site-packages/capsul/qt_apps'...
Listing './lib/python3.5/site-packages/capsul/qt_apps/resources'...
Listing './lib/python3.5/site-packages/capsul/qt_apps/utils'...
Listing './lib/python3.5/site-packages/capsul/qt_gui'...
Listing './lib/python3.5/site-packages/capsul/qt_gui/test'...
Listing './lib/python3.5/site-packages/capsul/qt_gui/widgets'...
Listing './lib/python3.5/site-packages/capsul/sphinxext'...
Listing './lib/python3.5/site-packages/capsul/sphinxext/test'...
Listing './lib/python3.5/site-packages/capsul/study_config'...
Listing './lib/python3.5/site-packages/capsul/study_config/config_modules'...
Listing './lib/python3.5/site-packages/capsul/study_config/test'...
Listing './lib/python3.5/site-packages/capsul/subprocess'...
Listing './lib/python3.5/site-packages/capsul/test'...
Compiling './lib/python3.5/site-packages/capsul/test/coverage.py'...
***   File "./lib/python3.5/site-packages/capsul/test/coverage.py", line 101
    print report
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/capsul/utils'...
Listing './lib/python3.5/site-packages/capsul/utils/test'...
Listing './lib/python3.5/site-packages/capsul-2.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/soma'...
Listing './lib/python3.5/site-packages/soma/controller'...
Listing './lib/python3.5/site-packages/soma/controller/tests'...
Listing './lib/python3.5/site-packages/soma/minf'...
Listing './lib/python3.5/site-packages/soma/minf/tests'...
Listing './lib/python3.5/site-packages/soma/pipeline'...
Listing './lib/python3.5/site-packages/soma/plugins'...
Listing './lib/python3.5/site-packages/soma/qt_gui'...
Listing './lib/python3.5/site-packages/soma/qt_gui/controls'...
Compiling './lib/python3.5/site-packages/soma/qt_gui/generic_table_editor.py'...
***   File "./lib/python3.5/site-packages/soma/qt_gui/generic_table_editor.py", line 296
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/soma/qt_gui/test'...
Listing './lib/python3.5/site-packages/soma/sandbox'...
Listing './lib/python3.5/site-packages/soma/test_utils'...
Listing './lib/python3.5/site-packages/soma/tests'...
Listing './lib/python3.5/site-packages/soma/utils'...
Listing './lib/python3.5/site-packages/soma_base-4.6.1.egg-info'...
Listing './lib/python3.5/site-packages/traits'...
Listing './lib/python3.5/site-packages/traits/adaptation'...
Listing './lib/python3.5/site-packages/traits/adaptation/tests'...
Listing './lib/python3.5/site-packages/traits/etsconfig'...
Listing './lib/python3.5/site-packages/traits/etsconfig/tests'...
Listing './lib/python3.5/site-packages/traits/protocols'...
Listing './lib/python3.5/site-packages/traits/testing'...
Listing './lib/python3.5/site-packages/traits/testing/tests'...
Listing './lib/python3.5/site-packages/traits/tests'...
Listing './lib/python3.5/site-packages/traits/util'...
Listing './lib/python3.5/site-packages/traits/util/tests'...
Listing './lib/python3.5/site-packages/traits-4.6.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
